[package]
name = "bridger2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtra = { version = "0.5.1", features = ["with-smol-1"] }
async-trait = "0.1.36"
smol = "1.1"
service = { path = "./services/service" }
affirm = { path = "./services/affirm" }
log = { path = "./services/log" }