[package]
name = "bridger2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "./services/*",
]

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
service = { path = "./services/service" }
affirm = { path = "./services/affirm" }
log = { path = "./services/log" }
# darwinia-relayer = { path = "./services/darwinia-relayer" }
