[package]
name = "darwinia-relayer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
anyhow = "1.0"
async-trait = "0.1.36"
xtra = { version = "0.5.1", features = ["with-async_std-1"] }
async-std = { version = "1.9.0" }
service = { path = "../service" }
substrate-subxt = { git = "https://github.com/darwinia-network/substrate-subxt.git", tag = "darwinia-v0.15.2" }
darwinia = { package = "bridge-client-darwinia", path = "../../libs/darwinia" }
